Fiks støtte for UTF-8 for maler, mer logging og jetty
- Oppdatert med kode fra Tore for fiksing av UTF-8
- Enabling eq og neq funksjonalitet
- Bumping av spring boot og handlebars
- tatt i bruk egen logback.xml
- byttet fra tomcat til jetty